--- a/packages/manager/apps/dedicated/client/app/dedicatedCloud/onboarding/onboarding.html
+++ b/packages/manager/apps/dedicated/client/app/dedicatedCloud/onboarding/onboarding.html
@@ -1,4 +1,7 @@
-<manager-on-boarding-layout data-guides=":: $ctrl.guides">
+<manager-on-boarding-layout
+    data-guides=":: $ctrl.guides"
+    data-image-source=":: $ctrl.illustration"
+>
     <onboarding-title>
         <p data-translate="dedicated_clouds_onboarding_title"></p>
     </onboarding-title>
@@ -6,6 +9,7 @@
         <p data-translate="dedicated_clouds_onboarding_description"></p>
         <p data-translate="dedicated_clouds_onboarding_description2"></p>
         <p data-translate="dedicated_clouds_onboarding_description3"></p>
+        <p data-translate="dedicated_clouds_onboarding_description4"></p>
         <a
             class="oui-button oui-button_primary oui-button_l text-light"
             data-translate="dedicated_clouds_onboarding_order"
