feat(storage.cold-archive): remove outdated code
ref: MANAGER-10677
Signed-off-by: Rafik Adiche <rafik.adiche.ext@corp.ovh.com>
Signed-off-by: Mohammed ZAHAF <mohammed.zahaf.ext@ovhcloud.com>

--- a/packages/manager/modules/pci/src/projects/project/storages/cold-archive/containers/containers.html
+++ b/packages/manager/modules/pci/src/projects/project/storages/cold-archive/containers/containers.html
@@ -52,7 +52,7 @@
             data-filterable
         >
             <span
-                class="{{$ctrl.getStatusClass($row.status)}}"
+                class="{{$ctrl.constructor.getStatusClass($row.status)}}"
                 data-ng-bind=":: $row.translatedStatus"
             ></span>
         </oui-datagrid-column>
