feat(storage.cold-archive): use api call to get regions
ref: MANAGER-10677
Signed-off-by: Rafik Adiche <rafik.adiche.ext@corp.ovh.com>

--- a/packages/manager/modules/pci/src/projects/project/storages/cold-archive/containers/manage-archive/manage-archive.html
+++ b/packages/manager/modules/pci/src/projects/project/storages/cold-archive/containers/manage-archive/manage-archive.html
@@ -40,7 +40,7 @@
             data-label="{{:: 'pci_projects_project_storages_cold_archive_containers_container_manage_region_label' | translate }}"
         >
             <oui-clipboard
-                data-model="$ctrl.region.toLowerCase()"
+                data-model="$ctrl.regions[0].toLowerCase()"
             ></oui-clipboard>
         </oui-field>
     </div>
