--- a/packages/manager/modules/pci/src/projects/project/additional-ips/floating-ips/edit/edit.html
+++ b/packages/manager/modules/pci/src/projects/project/additional-ips/floating-ips/edit/edit.html
@@ -8,45 +8,52 @@
     data-on-dismiss="$ctrl.onCancelClick()"
     data-loading="$ctrl.isLoading"
 >
-    <p
-        data-translate="pci_additional_ips_floatingips_edit_description"
-        data-translate-values="{ serviceName: $ctrl.ip.ip }"
-    ></p>
-    <oui-field
-        data-label="{{:: 'pci_additional_ips_floatingips_edit_select_instance' | translate }}"
-    >
-        <oui-select
-            name="instance"
-            data-model="$ctrl.instance"
-            data-placeholder="{{ ::'pci_additional_ips_floatingips_edit_select_instance' | translate }}"
-            data-items="$ctrl.instances"
-            data-disable-items="!$item.canAttachIPFO()"
-            data-on-change="$ctrl.loadPrivateNetworks(modelValue)"
-            data-match="name"
-            data-required
-        >
-        </oui-select>
-    </oui-field>
-    <oui-field
-        data-ng-if="$ctrl.privateNetwork"
-        data-label="{{:: 'pci_additional_ips_floatingips_edit_select_ip' | translate }}"
-    >
-        <oui-select
-            name="privateNetwork"
-            data-placeholder="{{:: 'pci_additional_ips_floatingips_edit_select_ip' | translate }}"
-            data-model="$ctrl.privateNetwork"
-            data-items="$ctrl.privateNetworks"
-            data-match="ip"
-            data-required
-        >
-        </oui-select>
-    </oui-field>
-    <oui-message
-        data-type="warning"
-        data-ng-if="$ctrl.instance && !$ctrl.privateNetwork.gatewayIp"
-    >
+    <div data-ng-if="$ctrl.instance">
         <p
-            data-translate="pci_additional_ips_floatingips_edit_gateway_error"
+            data-translate="pci_additional_ips_floatingips_edit_description"
+            data-translate-values="{ serviceName: $ctrl.ip.ip }"
+        ></p>
+        <oui-field
+            data-label="{{:: 'pci_additional_ips_floatingips_edit_select_instance' | translate }}"
+        >
+            <oui-select
+                name="instance"
+                data-model="$ctrl.instance"
+                data-placeholder="{{ ::'pci_additional_ips_floatingips_edit_select_instance' | translate }}"
+                data-items="$ctrl.instances"
+                data-disable-items="!$item.canAttachIPFO()"
+                data-on-change="$ctrl.loadPrivateNetworks(modelValue)"
+                data-match="name"
+                data-required
+            >
+            </oui-select>
+        </oui-field>
+        <oui-field
+            data-ng-if="$ctrl.privateNetwork"
+            data-label="{{:: 'pci_additional_ips_floatingips_edit_select_ip' | translate }}"
+        >
+            <oui-select
+                name="privateNetwork"
+                data-placeholder="{{:: 'pci_additional_ips_floatingips_edit_select_ip' | translate }}"
+                data-model="$ctrl.privateNetwork"
+                data-items="$ctrl.privateNetworks"
+                data-match="ip"
+                data-required
+            >
+            </oui-select>
+        </oui-field>
+        <oui-message
+            data-type="warning"
+            data-ng-if="$ctrl.instance && !$ctrl.privateNetwork.gatewayIp"
+        >
+            <p
+                data-translate="pci_additional_ips_floatingips_edit_gateway_error"
+            ></p>
+        </oui-message>
+    </div>
+    <oui-message data-type="info" data-ng-if="!$ctrl.instance">
+        <p
+            data-translate="pci_additional_ips_floatingips_edit_gateway_no_instance_error"
         ></p>
     </oui-message>
 </oui-modal>
