fix: distributed storage prices
datatr-188

Signed-off-by: Jonathan Perchoc <jonathan.perchoc@ovhcloud.com>

--- a/packages/manager/modules/pci/src/projects/project/storages/databases/add/add.html
+++ b/packages/manager/modules/pci/src/projects/project/storages/databases/add/add.html
@@ -117,7 +117,7 @@
                             hourly: $ctrl.model.flavor.hourlyPricePerGB,
                             monthly: $ctrl.model.flavor.monthlyPricePerGB,
                         }"
-                    data-nodes="$ctrl.model.plan.nodesCount"
+                    data-nodes="$ctrl.storageNodeFactor"
                     data-show-monthly-prices="$ctrl.showMonthlyPrices"
                     data-show-prices="true"
                 >
