--- a/packages/manager/modules/pci/src/projects/project/storages/databases/database/general-information/add-node/add-node.html
+++ b/packages/manager/modules/pci/src/projects/project/storages/databases/database/general-information/add-node/add-node.html
@@ -14,7 +14,7 @@
         }"
     ></span>
     <ovh-manager-catalog-price
-        data-price="$ctrl.price.priceInUcents"
+        data-price="$ctrl.price"
         data-tax="$ctrl.price.tax"
         data-user="$ctrl.user"
         data-show-zero-price="true"
