--- a/packages/manager/modules/pci/src/projects/project/storages/databases/database/general-information/upgrade-storage/upgrade-storage.html
+++ b/packages/manager/modules/pci/src/projects/project/storages/databases/database/general-information/upgrade-storage/upgrade-storage.html
@@ -32,7 +32,7 @@
                     hourly: $ctrl.flavor.hourlyPricePerGB,
                     monthly: $ctrl.flavor.monthlyPricePerGB,
                 }"
-            data-nodes="$ctrl.database.nodes.length"
+            data-nodes="$ctrl.storageNodeFactor"
             data-show-prices="false"
             data-show-monthly-prices="$ctrl.showMonthlyPrices"
         >
