--- a/packages/manager/modules/catalog-price/src/catalog-price.html
+++ b/packages/manager/modules/catalog-price/src/catalog-price.html
@@ -21,7 +21,7 @@
             </strong>
             <small
                 data-ng-if="::!$ctrl.isUndefined($ctrl.tax)"
-                data-ng-class="{ 'd-block': $ctrl.block }"
+                data-ng-class="{ 'd-block': $ctrl.block, 'text-decoration-line-through': $ctrl.beta }"
             >
                 (<span
                     data-translate="order_catalog_price_gst_incl_label"
@@ -30,9 +30,16 @@
                 </span
                 >)
             </small>
+            <span
+                data-ng-if="$ctrl.beta"
+                class="oui-badge oui-badge_s oui-badge_success"
+                data-translate="order_catalog_price_beta_free"
+            ></span>
         </span>
         <span data-ng-if="::$ctrl.isFrenchFormat()">
-            <strong data-ng-class="{ 'd-block': $ctrl.block }">
+            <strong
+                data-ng-class="{ 'd-block': $ctrl.block, 'text-decoration-line-through': $ctrl.beta  }"
+            >
                 <span
                     data-translate="order_catalog_price_tax_excl_label"
                     data-translate-values="{ price: $ctrl.getPriceText($ctrl.price) }"
@@ -52,7 +59,7 @@
             </strong>
             <small
                 data-ng-if="::!$ctrl.isUndefined($ctrl.tax)"
-                data-ng-class="{ 'd-block': $ctrl.block }"
+                data-ng-class="{ 'd-block': $ctrl.block, 'text-decoration-line-through': $ctrl.beta  }"
             >
                 (<span
                     data-translate="order_catalog_price_tax_incl_label"
@@ -61,6 +68,11 @@
                 </span
                 >)
             </small>
+            <span
+                data-ng-if="$ctrl.beta"
+                class="oui-badge oui-badge_s oui-badge_success"
+                data-translate="order_catalog_price_beta_free"
+            ></span>
         </span>
         <strong
             data-ng-if="::$ctrl.isGermanFormat()"
@@ -68,37 +80,63 @@
         >
             <span
                 data-ng-bind="$ctrl.getPriceText($ctrl.price + $ctrl.tax)"
+                data-ng-class="{ 'text-decoration-line-through': $ctrl.beta }"
             ></span>
-            <span data-ng-if="$ctrl.interval">
+            <span
+                data-ng-if="$ctrl.interval"
+                data-ng-class="{ 'text-decoration-line-through': $ctrl.beta }"
+            >
                 &#47;
                 <span
                     data-translate="{{:: 'order_catalog_price_interval_' + $ctrl.interval}}"
                 ></span>
             </span>
-            <span data-ng-if="$ctrl.intervalUnit">
+            <span
+                data-ng-if="$ctrl.intervalUnit"
+                data-ng-class="{ 'text-decoration-line-through': $ctrl.beta }"
+            >
                 &#47;
                 <span
                     data-translate="{{:: 'order_catalog_price_interval_' + $ctrl.intervalUnit }}"
                 ></span>
             </span>
+            <span
+                data-ng-if="$ctrl.beta"
+                class="oui-badge oui-badge_s oui-badge_success"
+                data-translate="order_catalog_price_beta_free"
+            ></span>
         </strong>
         <strong
             data-ng-if="::$ctrl.isUSFormat()"
             data-ng-class="{ 'd-block': $ctrl.block }"
         >
-            <span data-ng-bind="$ctrl.getPriceText($ctrl.price)"></span>
-            <span data-ng-if="$ctrl.interval">
+            <span
+                data-ng-bind="$ctrl.getPriceText($ctrl.price)"
+                data-ng-class="{ 'text-decoration-line-through': $ctrl.beta }"
+            ></span>
+            <span
+                data-ng-if="$ctrl.interval"
+                data-ng-class="{ 'text-decoration-line-through': $ctrl.beta }"
+            >
                 &#47;
                 <span
                     data-translate="{{:: 'order_catalog_price_interval_' + $ctrl.interval}}"
                 ></span>
             </span>
-            <span data-ng-if="$ctrl.intervalUnit">
+            <span
+                data-ng-if="$ctrl.intervalUnit"
+                data-ng-class="{ 'text-decoration-line-through': $ctrl.beta }"
+            >
                 &#47;
                 <span
                     data-translate="{{:: 'order_catalog_price_interval_' + $ctrl.intervalUnit }}"
                 ></span>
             </span>
+            <span
+                data-ng-if="$ctrl.beta"
+                class="oui-badge oui-badge_s oui-badge_success"
+                data-translate="order_catalog_price_beta_free"
+            ></span>
         </strong>
     </span>
     <strong
