fix: change region property to alias
datatr-163

Signed-off-by: Jonathan Perchoc <jonathan.perchoc@ovhcloud.com>

--- a/packages/manager/modules/pci/src/projects/project/notebooks/dashboard/attach-data/attach-data.html
+++ b/packages/manager/modules/pci/src/projects/project/notebooks/dashboard/attach-data/attach-data.html
@@ -53,7 +53,7 @@
                 title=":: 'pci_notebooks_tab_attach_data_page_volumes_column_region' | translate"
                 sortable="true"
             >
-                <span data-ng-bind="$row.dataStore.region"></span>
+                <span data-ng-bind="$row.dataStore.alias"></span>
             </oui-datagrid-column>
             <oui-datagrid-column
                 title=":: 'pci_notebooks_tab_attach_data_page_volumes_column_mount_path' | translate"
