fix(pci.additional-ips): display price per hour
 ref: DTRSD-106828

Signed-off-by: Anoop <anoop.n@ovhcloud.com>

--- a/packages/manager/modules/pci/src/projects/project/additional-ips/order/add.html
+++ b/packages/manager/modules/pci/src/projects/project/additional-ips/order/add.html
@@ -48,9 +48,9 @@
                         </span>
                         <ovh-manager-catalog-price
                             data-ng-if="type.name === $ctrl.IP_TYPE_ENUM.FLOATING"
-                            data-price="type.price * 12"
+                            data-price="type.price"
                             data-user="$ctrl.user"
-                            data-interval="'month'"
+                            data-interval-unit="hour"
                             data-perform-rounding="false"
                             data-maximum-fraction-digits="4"
                         ></ovh-manager-catalog-price>
