--- a/packages/manager/modules/vps/src/dashboard/modal/snapshot-download/snapshot-download.html
+++ b/packages/manager/modules/vps/src/dashboard/modal/snapshot-download/snapshot-download.html
@@ -44,7 +44,7 @@
             </oui-tile-description>
         </oui-tile-definition>
     </oui-tile>
-    <div class="mt-3 mb-3">
+    <div class="my-3">
         <div
             class="notification-box oui-message oui-message_info"
             data-ng-if="$ctrl.isLoading"
