fix: corrected getRoles method and added aria-hidden
DATATR-44

Signed-off-by: Alexandre Claveau <alexandre.claveau@ovhcloud.com>

--- a/packages/manager/modules/pci/src/projects/project/storages/databases/database/users/add/add.html
+++ b/packages/manager/modules/pci/src/projects/project/storages/databases/database/users/add/add.html
@@ -134,6 +134,7 @@
                                     <oui-message
                                         data-type="error"
                                         data-ng-if="$ctrl.model.selectedRoles[$index].error"
+                                        class="px-md-3"
                                     >
                                         <span
                                             data-translate="pci_databases_user_add_error_existing"
@@ -164,6 +165,7 @@
                                     >
                                         <span
                                             class="oui-icon oui-icon-trash"
+                                            aria-hidden="true"
                                         ></span>
                                     </button>
                                 </footer>
