--- a/packages/manager/modules/pci/src/projects/project/storages/volume-backup/create/create.template.html
+++ b/packages/manager/modules/pci/src/projects/project/storages/volume-backup/create/create.template.html
@@ -22,6 +22,9 @@
     data-translate="pci_projects_project_storages_volume_backup_create_description"
 ></p>
 
+<!--Messages-->
+<cui-message-container data-messages="$ctrl.messages"></cui-message-container>
+
 <!--Step 1 :: Select a volume to backup-->
 <div class="py-2">
     <!--Title-->
@@ -84,13 +87,12 @@
     <!--Types-->
     <div class="row">
         <oui-select-picker
-            class="d-inline-block col-4 col-md-4 my-3"
-            data-ng-init="$ctrl.volumeBackupModel.selected.volumeOption = $ctrl.VOLUMES_OPTIONS[0]"
+            class="d-inline-block col-sm-12 col-md-4 my-3"
             data-ng-repeat="volumeOption in $ctrl.VOLUMES_OPTIONS track by volumeOption.id"
             data-id="volume-backup-type-{{volumeOption.id}}"
             data-name="volume-backup-type-{{volumeOption.id}}"
             data-model="$ctrl.volumeBackupModel.selected.volumeOption"
-            data-disabled="$ctrl.isCreating || !$ctrl.isSelectableVolumeOption()"
+            data-disabled="$ctrl.isCreating || !$ctrl.volumeBackupModel.selected.volume"
             data-values="[volumeOption]"
             data-variant="light"
         >
@@ -117,17 +119,42 @@
     </div>
 </div>
 
-<!--Step 3 :: Name the backup-->
+<!--Step 3 :: Detach volume from instance-->
+<div class="py-2" data-ng-if="$ctrl.isSelectedVolumeNeedToDetach()">
+    <!--Title-->
+    <p
+        class="oui-heading_3 mb-2"
+        data-translate="pci_projects_project_storages_volume_backup_create_step_3_detach_volume_from_instance_title"
+    ></p>
+
+    <!--Description-->
+    <p
+        data-translate="pci_projects_project_storages_volume_backup_create_step_3_detach_volume_from_instance_description"
+    ></p>
+
+    <!--Detach volume-->
+    <oui-button
+        data-variant="link"
+        data-icon-right="oui-icon-arrow-right"
+        data-on-click="$ctrl.onGoToDetachVolumeFromInstanceLinkClick()"
+    >
+        <span
+            data-translate="pci_projects_project_storages_volume_backup_create_step_3_detach_volume_from_instance_action_detach"
+        ></span>
+    </oui-button>
+</div>
+
+<!--Step 4 :: Name the backup-->
 <div class="py-2">
     <!--Title-->
     <p
         class="oui-heading_3 mb-2"
-        data-translate="pci_projects_project_storages_volume_backup_create_step_3_title"
+        data-translate="pci_projects_project_storages_volume_backup_create_step_4_title"
     ></p>
 
     <!--Name-->
     <oui-field
-        data-label="{{::'pci_projects_project_storages_volume_backup_create_step_3_input_label' | translate}}"
+        data-label="{{::'pci_projects_project_storages_volume_backup_create_step_4_input_label' | translate}}"
         data-size="l"
     >
         <input
@@ -141,7 +168,7 @@
     </oui-field>
 </div>
 
-<!--Step 4 :: Create a volume backup-->
+<!--Step 5 :: Create a volume backup-->
 <div class="py-2">
     <oui-button
         data-size="l"
