--- a/packages/manager/modules/pci/src/projects/project/storages/databases/database/backups/backups.html
+++ b/packages/manager/modules/pci/src/projects/project/storages/databases/database/backups/backups.html
@@ -97,11 +97,7 @@
                 ></span>
             </span>
         </oui-datagrid-column>
-        <oui-action-menu
-            data-compact
-            data-placement="end"
-            data-ng-if="!$ctrl.isEngineVersionDeprecated"
-        >
+        <oui-action-menu data-compact data-placement="end">
             <oui-action-menu-item
                 data-ng-if="$ctrl.isFeatureActivated('restoreFromBackup')"
                 data-on-click="$ctrl.restoreBackup($row)"
@@ -112,6 +108,7 @@
             <oui-action-menu-item
                 data-on-click="$ctrl.forkBackup($row)"
                 data-disabled="!($row.isActive() && $ctrl.database.isActive())"
+                data-ng-if="!$ctrl.isEngineVersionDeprecated"
             >
                 <span data-translate="pci_databases_backup_fork"></span>
             </oui-action-menu-item>
@@ -123,6 +120,13 @@
                 data-disabled="!$ctrl.isTopButtonEnabled"
             >
                 <span data-translate="pci_databases_backup_fork"></span>
+            </oui-button>
+            <oui-button
+                data-ng-if="$ctrl.isFeatureActivated('restoreFromBackup')"
+                data-on-click="$ctrl.restoreBackup()"
+                data-disabled="!$ctrl.isTopButtonEnabled"
+            >
+                <span data-translate="pci_databases_backup_restore"></span>
             </oui-button>
             <button
                 class="float-right oui-button oui-button_secondary oui-button_icon-only oui-button_s"
