fix(hub.account): add a banner to invit the customer to update the siret
ref:MANAGER-10205

Signed-off-by: stif59100 <steeve.vanderstocken@ovhcloud.com>

--- a/packages/manager/apps/dedicated/client/app/account/user/infos/user-infos.html
+++ b/packages/manager/apps/dedicated/client/app/account/user/infos/user-infos.html
@@ -142,6 +142,7 @@
                     data-on-submit="$ctrl.onProfileUpdate()"
                     data-on-cancel="$ctrl.onProfileUpdate()"
                     data-user-account-service-infos="$ctrl.userAccountServiceInfos"
+                    data-field-to-focus="$ctrl.fieldToFocus"
                 >
                 </new-account-form>
             </div>
