--- a/packages/manager/apps/hub/src/dashboard/dashboard.html
+++ b/packages/manager/apps/hub/src/dashboard/dashboard.html
@@ -15,6 +15,28 @@
                 tracking-prefix="{{ $ctrl.prefix }}"
             ></ovh-manager-hub-carousel>
         </div>
+        <oui-message
+            type="info"
+            on-dismiss="$ctrl.onDismiss()"
+            dismissable
+            data-ng-if="$ctrl.availableSiretBanner"
+        >
+            <span data-translate="manager_hub_dashboard_banner_siret"></span>
+            <a
+                class="oui-link_icon"
+                href="{{:: $ctrl.ACCOUNT_DASHBOARD_URL }}"
+                data-ng-click="$ctrl.trackClick()"
+                target="_top"
+            >
+                <span
+                    data-translate="manager_hub_dashboard_banner_siret_link"
+                ></span>
+                <span
+                    class="oui-icon oui-icon-external-link d-block-inline"
+                    aria-hidden="true"
+                ></span
+            ></a>
+        </oui-message>
         <h2 data-translate="manager_hub_dashboard_overview"></h2>
         <div class="row">
             <hub-payment-status
