--- a/packages/manager/modules/pci/src/projects/project/data-processing/home/data-processing-home.html
+++ b/packages/manager/modules/pci/src/projects/project/data-processing/home/data-processing-home.html
@@ -16,9 +16,6 @@
                                 data-placement="end"
                                 data-ng-click="$ctrl.onSubmitClick()"
                                 class="oui-button oui-button_primary oui-button_icon-left"
-                                data-track-on="click"
-                                data-track-name="public-cloud::pci::projects::project::training::jobs::add-job"
-                                data-track-type="action"
                             >
                                 <span
                                     class="oui-icon oui-icon-add pr-1"
@@ -33,7 +30,7 @@
                                 data-ng-click="$ctrl.showJobs()"
                                 class="oui-button oui-button_secondary oui-button_icon-left"
                                 data-track-on="click"
-                                data-track-name="public-cloud::pci::projects::project::training::jobs::add-job"
+                                data-track-name="public-cloud::pci::projects::project::data-processing"
                                 data-track-type="navigation"
                             >
                                 <span
@@ -71,9 +68,6 @@
                                 data-placement="end"
                                 data-ng-click="$ctrl.onAddNotebookClick()"
                                 class="oui-button oui-button_primary oui-button_icon-left"
-                                data-track-on="click"
-                                data-track-name="public-cloud::pci::projects::project::training::jobs::add-job"
-                                data-track-type="action"
                             >
                                 <span
                                     class="oui-icon oui-icon-add pr-1"
@@ -88,7 +82,7 @@
                                 data-ng-click="$ctrl.showNotebooks()"
                                 class="oui-button oui-button_secondary oui-button_icon-left"
                                 data-track-on="click"
-                                data-track-name="public-cloud::pci::projects::project::training::jobs::add-job"
+                                data-track-name="public-cloud::pci::projects::project::data-processing-notebooks"
                                 data-track-type="navigation"
                             >
                                 <span
