fix(pci.data-processing): fixing issues with the prices and the order
DATATR-184

Signed-off-by: Gael Leblan <gael.leblan@ovhcloud.com>

--- a/packages/manager/modules/pci/src/projects/project/data-processing/notebooks/add-notebook/add-notebook.html
+++ b/packages/manager/modules/pci/src/projects/project/data-processing/notebooks/add-notebook/add-notebook.html
@@ -62,6 +62,7 @@
                     data-translate="data_processing_add_notebook_stepper_sizing_title"
                 ></h2>
                 <pci-project-data-processing-add-notebook-notebook-sizing
+                    data-prices="$ctrl.prices"
                     data-on-change-handler="$ctrl.onChangeSizingHandler"
                     data-available-cluster-template="$ctrl.state.notebookEngine.templates"
                 >
