feat(*): add tracking in product listing pages
ref: MANAGER-10660

Signed-off-by: sachinrameshn <sachin.ramesh@ovhcloud.com>

--- a/packages/manager/apps/dedicated/client/app/license/license.html
+++ b/packages/manager/apps/dedicated/client/app/license/license.html
@@ -21,14 +21,14 @@
                     >
                         <oui-action-menu-item
                             aria-label="{{:: 'license_order_title_button' | translate }}"
-                            data-ui-sref="app.license.order"
+                            data-on-click="onGoToLicenseOrder()"
                             ><span
                                 data-translate="license_order_title_button"
                             ></span>
                         </oui-action-menu-item>
                         <oui-action-menu-item
                             aria-label="{{:: 'license_spla_add_title_button' | translate }}"
-                            data-ui-sref="app.license.dashboard.spla-add"
+                            data-on-click="onGoToLicenseSpla()"
                             ><span
                                 data-translate="license_spla_add_title_button"
                             ></span>
