--- a/packages/manager/modules/pci/src/projects/project/storages/volume-backup/create/detach-volume/detach-volume.template.html
+++ b/packages/manager/modules/pci/src/projects/project/storages/volume-backup/create/detach-volume/detach-volume.template.html
@@ -1,5 +1,5 @@
 <oui-modal
-    data-heading="{{:: $ctrl.getTitle() }}"
+    data-heading="{{:: 'pci_projects_project_storages_volume_backup_create_detach_volume_title' | translate }}"
     data-primary-label="{{:: 'pci_projects_project_storages_volume_backup_create_detach_volume_action_detach' | translate }}"
     data-secondary-label="{{:: 'pci_projects_project_storages_volume_backup_create_detach_volume_action_cancel' | translate }}"
     data-primary-disabled="$ctrl.isDetaching"
@@ -11,5 +11,6 @@
 >
     <p
         data-translate="pci_projects_project_storages_volume_backup_create_detach_volume_description"
+        data-translate-values="{ volumeName: '<strong>' + $ctrl.volume.name + '</strong>', instanceName: '<strong>' + $ctrl.instance.name + '</strong>' }"
     ></p>
 </oui-modal>
