fix(pci.data-processing): fix PR comments
DATATR-184

Signed-off-by: Gael Leblan <gael.leblan@ovhcloud.com>

--- a/packages/manager/modules/pci/src/projects/project/data-processing/notebooks/add-notebook/add-notebook.html
+++ b/packages/manager/modules/pci/src/projects/project/data-processing/notebooks/add-notebook/add-notebook.html
@@ -177,9 +177,9 @@
 
                             <oui-button
                                 block
-                                on-click="$ctrl.trackAndGoToCommand()"
+                                data-on-click="$ctrl.trackAndGoToCommand()"
                                 class="mb-2 mt-2"
-                                icon-left="oui-icon-app-script_concept"
+                                data-icon-left="oui-icon-app-script_concept"
                             >
                                 <span
                                     data-translate="data_processing_add_notebook_api_equivalent"
