--- a/packages/manager/modules/vps/src/dashboard/tile/configuration/index.html
+++ b/packages/manager/modules/vps/src/dashboard/tile/configuration/index.html
@@ -20,6 +20,7 @@
                 data-ng-if="!$ctrl.vpsUpgradeTask && !$ctrl.isMaxEliteVcore && !$ctrl.isInRescueMode && !$ctrl.isMigrating"
             >
                 <a
+                    data-ng-if="$ctrl.configurationTile.upgrades"
                     data-ng-href="{{:: $ctrl.getUpscaleHref() }}"
                     data-track-on="click"
                     data-track-name="vps::detail::dashboard::vcore-upscale"
@@ -78,6 +79,7 @@
                 data-ng-if="!$ctrl.vpsUpgradeTask && !$ctrl.isMaxEliteRam && !$ctrl.isInRescueMode && !$ctrl.isMigrating"
             >
                 <a
+                    data-ng-if="$ctrl.configurationTile.upgrades"
                     data-ng-href="{{:: $ctrl.getUpscaleHref()}}"
                     data-track-on="click"
                     data-track-name="vps::detail::dashboard::memory-upscale"
@@ -136,6 +138,7 @@
                 data-ng-if="!$ctrl.vpsUpgradeTask && !$ctrl.isMaxEliteStorage && !$ctrl.isInRescueMode"
             >
                 <a
+                    data-ng-if="$ctrl.configurationTile.upgrades"
                     data-ng-href="{{:: $ctrl.getUpscaleHref()}}"
                     data-track-on="click"
                     data-track-name="vps::detail::dashboard::storage-upscale"
